--- a/projects/javafx/JavaFXProjectIlqar/src/az/devellopia/Books.fxml
+++ b/projects/javafx/JavaFXProjectIlqar/src/az/devellopia/Books.fxml
@@ -1,7 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-	
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="az.devellopia.BooksController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="az.devellopia.BooksController">
+   <children>
+      <VBox layoutY="22.0" prefHeight="432.0" prefWidth="600.0">
+         <children>
+            <HBox prefHeight="58.0" prefWidth="600.0" spacing="7.0">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               <children>
+                  <Label prefHeight="27.0" prefWidth="98.0" text="Kitabın adı:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookName" prefHeight="33.0" prefWidth="156.0" />
+                  <Label prefHeight="27.0" prefWidth="98.0" text="Qiymət:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookPrice" prefHeight="33.0" prefWidth="156.0" />
+               </children>
+            </HBox>
+            <HBox prefHeight="57.0" prefWidth="600.0" spacing="7.0">
+               <children>
+                  <Label prefHeight="27.0" prefWidth="99.0" text="Səhifə sayı:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="pageCount" prefHeight="33.0" prefWidth="156.0" />
+                  <Label prefHeight="27.0" prefWidth="98.0" text="Müəllif:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookAuthor" prefHeight="33.0" prefWidth="156.0" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </HBox>
+            <HBox prefHeight="54.0" prefWidth="600.0" spacing="7.0">
+               <children>
+                  <Label prefHeight="27.0" prefWidth="100.0" text="Məxfi kod:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <PasswordField fx:id="secretCodePF" prefHeight="33.0" prefWidth="156.0" />
+                  <Label prefHeight="27.0" prefWidth="98.0" text="Nəşr tarixi:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="publishDateDP" prefHeight="33.0" prefWidth="156.0" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#saveBook" prefHeight="37.0" prefWidth="126.0" style="-fx-background-color: pink;" text="Yadda saxla" textFill="#e40f0f">
+               <font>
+                  <Font name="System Bold Italic" size="16.0" />
+               </font>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="0.9894737005233765" green="0.018323587253689766" blue="0.018323587253689766" />
+                     </color>
+                  </DropShadow>
+               </effect>
+               <VBox.margin>
+                  <Insets bottom="22.0" left="226.0" right="8.0" top="23.0" />
+               </VBox.margin>
+            </Button>
+            <TableView fx:id="booksTable" prefHeight="198.0" prefWidth="226.0">
+              <columns>
+                <TableColumn fx:id="idColumn" prefWidth="64.0000312924385" text="Kod" />
+                  <TableColumn fx:id="nameColumn" prefWidth="128.79998779296875" text="Ad" />
+                  <TableColumn fx:id="priceColumn" prefWidth="77.59999084472656" text="Qiymət" />
+                  <TableColumn fx:id="pageCountColumn" prefWidth="75.199951171875" text="Səhifə sayı" />
+                  <TableColumn fx:id="authorColumn" prefWidth="139.20001220703125" text="Müəllif" />
+                  <TableColumn fx:id="publishDateColumn" prefWidth="116.79998779296875" text="Nəşr tarixi" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
+      <VBox layoutX="-119.0" layoutY="254.0" prefHeight="200.0" prefWidth="100.0" />
+   </children>
 </AnchorPane>
