--- a/projects/javafx/JavaFXProjectIlqar/src/az/devellopia/Books.fxml
+++ b/projects/javafx/JavaFXProjectIlqar/src/az/devellopia/Books.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -17,35 +18,19 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="az.devellopia.BooksController">
    <children>
-      <VBox layoutY="22.0" prefHeight="432.0" prefWidth="600.0">
+      <VBox layoutX="6.0" layoutY="31.0" prefHeight="570.0" prefWidth="611.0">
          <children>
-            <HBox prefHeight="58.0" prefWidth="600.0" spacing="7.0">
+            <HBox prefHeight="58.0" prefWidth="611.0" spacing="7.0">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
                <children>
-                  <Label prefHeight="27.0" prefWidth="98.0" text="Kitabın adı:">
+                  <Label prefHeight="27.0" prefWidth="106.0" text="Kitabın adı:">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
                   <TextField fx:id="bookName" prefHeight="33.0" prefWidth="156.0" />
-                  <Label prefHeight="27.0" prefWidth="98.0" text="Qiymət:">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="bookPrice" prefHeight="33.0" prefWidth="156.0" />
-               </children>
-            </HBox>
-            <HBox prefHeight="57.0" prefWidth="600.0" spacing="7.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="99.0" text="Səhifə sayı:">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="pageCount" prefHeight="33.0" prefWidth="156.0" />
                   <Label prefHeight="27.0" prefWidth="98.0" text="Müəllif:">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -53,56 +38,129 @@
                   </Label>
                   <TextField fx:id="bookAuthor" prefHeight="33.0" prefWidth="156.0" />
                </children>
+            </HBox>
+            <HBox prefHeight="67.0" prefWidth="611.0" spacing="7.0">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
-            </HBox>
-            <HBox prefHeight="54.0" prefWidth="600.0" spacing="7.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="100.0" text="Məxfi kod:">
+                  <Label prefHeight="27.0" prefWidth="222.0" text="Məxfi kod:">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <PasswordField fx:id="secretCodePF" prefHeight="33.0" prefWidth="156.0" />
-                  <Label prefHeight="27.0" prefWidth="98.0" text="Nəşr tarixi:">
+                  <PasswordField fx:id="secretCodePF" prefHeight="34.0" prefWidth="271.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin></PasswordField>
+                  <Label prefHeight="27.0" prefWidth="237.0" text="Nəşr tarixi:">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </Label>
-                  <DatePicker fx:id="publishDateDP" prefHeight="33.0" prefWidth="156.0" />
+                  <DatePicker fx:id="publishDateDP" prefHeight="34.0" prefWidth="225.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin></DatePicker>
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
                </children>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#saveBook" prefHeight="37.0" prefWidth="126.0" style="-fx-background-color: pink;" text="Yadda saxla" textFill="#e40f0f">
+            <HBox prefHeight="50.0" prefWidth="611.0">
+               <children>
+                  <Label prefHeight="27.0" prefWidth="118.0" text="Dil:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="bookLanguageCombo" prefHeight="36.0" prefWidth="150.0" promptText="Kitabın dili" />
+               </children>
+            </HBox>
+            <HBox prefHeight="86.0" prefWidth="611.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#saveBook" prefHeight="40.0" prefWidth="133.0" style="-fx-background-color: #329100;" text="Yadda saxla" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.9894737005233765" green="0.018323587253689766" blue="0.018323587253689766" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="11.0" right="33.0" top="18.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteBook" prefHeight="40.0" prefWidth="54.0" style="-fx-background-color: #FF0000;" text="Sil" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.9894737005233765" green="0.018323587253689766" blue="0.018323587253689766" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="22.0" top="18.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button layoutX="188.0" layoutY="28.0" mnemonicParsing="false" onAction="#editBook" prefHeight="40.0" prefWidth="102.0" style="-fx-background-color: #ff6a00;" text="Redaktə" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.9894737005233765" green="0.018323587253689766" blue="0.018323587253689766" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="22.0" top="18.0" />
+                     </HBox.margin>
+                  </Button>
+                  <TextField fx:id="searchTextfield" onKeyPressed="#searchBook" prefHeight="33.0" prefWidth="156.0" promptText="                Axtarış">
+                     <HBox.margin>
+                        <Insets top="22.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox prefHeight="223.0" prefWidth="611.0">
+               <children>
+                  <TableView fx:id="booksTable" prefHeight="274.0" prefWidth="611.0">
+                     <columns>
+                        <TableColumn fx:id="idColumn" prefWidth="77.5999755859375" text="Kod" />
+                        <TableColumn fx:id="nameColumn" prefWidth="178.4000244140625" text="Ad" />
+                        <TableColumn fx:id="authorColumn" prefWidth="172.79998779296875" text="Müəllif" />
+                        <TableColumn fx:id="publishDateColumn" prefWidth="170.4000244140625" text="Nəşr tarixi" />
+                     </columns>
+                  </TableView>
+               </children>
+            </HBox>
+            <Label fx:id="messages" textFill="RED">
                <font>
-                  <Font name="System Bold Italic" size="16.0" />
+                  <Font name="System Bold Italic" size="24.0" />
                </font>
-               <effect>
-                  <DropShadow>
-                     <color>
-                        <Color red="0.9894737005233765" green="0.018323587253689766" blue="0.018323587253689766" />
-                     </color>
-                  </DropShadow>
-               </effect>
                <VBox.margin>
-                  <Insets bottom="22.0" left="226.0" right="8.0" top="23.0" />
+                  <Insets left="22.0" top="22.0" />
                </VBox.margin>
-            </Button>
-            <TableView fx:id="booksTable" prefHeight="198.0" prefWidth="226.0">
-              <columns>
-                <TableColumn fx:id="idColumn" prefWidth="64.0000312924385" text="Kod" />
-                  <TableColumn fx:id="nameColumn" prefWidth="128.79998779296875" text="Ad" />
-                  <TableColumn fx:id="priceColumn" prefWidth="77.59999084472656" text="Qiymət" />
-                  <TableColumn fx:id="pageCountColumn" prefWidth="75.199951171875" text="Səhifə sayı" />
-                  <TableColumn fx:id="authorColumn" prefWidth="139.20001220703125" text="Müəllif" />
-                  <TableColumn fx:id="publishDateColumn" prefWidth="116.79998779296875" text="Nəşr tarixi" />
-              </columns>
-            </TableView>
+            </Label>
+            <Label fx:id="Messages" textFill="RED">
+               <font>
+                  <Font name="System Bold Italic" size="23.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="22.0" top="22.0" />
+               </VBox.margin>
+            </Label>
          </children>
       </VBox>
-      <VBox layoutX="-119.0" layoutY="254.0" prefHeight="200.0" prefWidth="100.0" />
    </children>
 </AnchorPane>
